--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,6 @@
 /* TODO Add site wide styles */
+body {
+    margin: 0;
+    padding: 0;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
