--- a/react-app/src/components/auth/LogoutButton.css
+++ b/react-app/src/components/auth/LogoutButton.css
@@ -2,8 +2,11 @@
     border: 0;
     background-color: white;
     width: 80px;
+    cursor: pointer;
+    padding: 5px;
 }
 
 #btn-log-out:hover {
     text-decoration: underline;
+    text-decoration-skip-ink: auto;
 }
