--- a/react-app/src/components/Account/MyAccount.css
+++ b/react-app/src/components/Account/MyAccount.css
@@ -7,7 +7,7 @@
 }
 
 #sidebar-ctn {
-    width: 25%;
+    width: 300px;
 }
 
 #sidebar-li {
@@ -19,6 +19,7 @@
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+    transition: background-color 0.5s;
 }
 
 .sidebar-row:hover {
@@ -56,6 +57,14 @@
     font-size: 12px;
 }
 
-#account-main-context {
-    width: 70%;
+#content-ctn {
+    /* background-color: rgb(244,244,244); */
+    width: 100%;
+}
+
+#account-main-content {
+    padding: 20px;
+    margin: 20px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
