--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -29,7 +29,7 @@ img {
     transition: border-bottom-width 0.5s;
     color: rgb(57, 57, 57);
     font-weight: 400;
-    font-size: 12px;
+    font-size: 15px;
 }
 
 #single-card-product-name:hover {
@@ -39,4 +39,17 @@ img {
 #single-card-product-price {
     font-weight: 700;
     font-size: 10px;
+}
+
+#single-card-product-rating span {
+    font-weight: 400;
+    font-size: 12px;
+    color: rgb(57, 57, 57);
+    margin-left: 10px;
+}
+
+#single-card-product-delivery span {
+    font-weight: 400;
+    font-size: 12px;
+    color: rgb(57, 57, 57);
 }
