--- a/react-app/src/components/ShoppingBag/ReviewOrder.css
+++ b/react-app/src/components/ShoppingBag/ReviewOrder.css
@@ -6,7 +6,9 @@
 
 .checkout-page-card-ctn {
     background-color: white;
-    margin: 20px;
+    margin: 20px auto;
+    padding: 20px;
+    width: 50%;
 }
 
 #checkout-inner-ctn {
@@ -23,7 +25,7 @@
     width: 55%;
     padding: 20px;
     margin: auto;
-    border: blue solid 2px;
+    /* border: blue solid 2px; */
 
 }
 
@@ -43,18 +45,28 @@
 }
 
 
-#checkout-inner-right-child {
-    width: 48%;
+.checkout-inner-child {
+    width: 55%;
     margin: auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    border: red solid 2px;
+    /* border: red solid 2px; */
 }
 
 .order-summary-title {
     font-weight: 700;
     margin: 10px 0;
+}
+
+.order-summary-subtitle {
+    margin-left: 10px;
+}
+
+#checkout-address-selections-ctn {
+    font-weight: 700;
+    font-size: small;
+    margin: 10px;
 }
 
 .order-summary-sub-lines {
@@ -85,4 +97,11 @@
 #checkout-place-order-btn:hover {
     border: none;
     background-color: rgb(102, 102, 102);
+}
+
+#checkout-place-order-btn-disabled {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(102, 102, 102);
+    color: #fff;
 }
