signin form modal added

--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -15,11 +15,16 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.6);
 }
 
 #modal-content {
     position: absolute;
     background-color: white;
-    border-radius: 20px;
+    width: fit-content;
+    height: fit-content;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
