--- a/react-app/src/components/Account/MyAccount.css
+++ b/react-app/src/components/Account/MyAccount.css
@@ -1,13 +1,21 @@
 #my-account-container {
     width: 80%;
-    border: black solid 1px;
-    margin: auto;
+    margin: 30px auto 0 auto;
     display: flex;
     flex-direction: row;
 }
 
 #sidebar-ctn {
     width: 300px;
+    height: 100vh;
+    /* border: black solid 1px; */
+    padding-top: 20px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+
+}
+
+#sidebar-header {
+    margin: auto;
 }
 
 #sidebar-li {
