--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -1,3 +1,8 @@
+#empty-user-bar-ctn {
+    width: 95%;
+    margin: auto;
+}
+
 #all-products-container {
     display: flex;
     flex-direction: row;
