--- a/react-app/src/components/auth/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/auth/LoginFormModal/LoginForm.css
@@ -20,7 +20,7 @@
     margin: auto;
 }
 
-#login-form-ctn {
+.auth-form-ctn {
     margin: auto;
     min-width: 400px;
     /* border: red solid 1px; */
@@ -51,13 +51,13 @@
     border-bottom: 3px solid rgb(57, 57, 57);
 }
 
-#login-form input {
+.auth-form input {
     width: 100%;
     height: 40px;
     font-size: 18px;
 }
 
-#login-form button {
+.auth-form button {
     width: 100%;
     width: 100%;
     height: 40px;
@@ -74,12 +74,16 @@
     margin: 10px 0;
 }
 
-#login-form button:hover {
+.auth-form button:hover {
     border: none;
     background-color: rgb(102, 102, 102);
 }
 
-#products-page-login-btn {
+.red-star-span {
+    color: rgb(223, 34,71);
+}
+
+.products-page-login-signup-btn {
     border-style: solid;
     border-bottom-width: 2px;
     border-top: none;
@@ -92,7 +96,7 @@
     transition: border-bottom-width 0.5s;
 }
 
-#products-page-login-btn:hover {
+.products-page-login-signup-btn:hover {
     border-bottom-width: 3px;
 }
 
@@ -102,6 +106,6 @@
     cursor: pointer;
 }
 
-#modal-sign-in-btn-ctn {
+.modal-auth-submit-btn-ctn {
     margin-top: 30px;
 }
