--- a/react-app/src/components/ShoppingBag/EmptyBag.css
+++ b/react-app/src/components/ShoppingBag/EmptyBag.css
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: background-color 0.5s;
+    transition: background-color color 0.5s;
     margin-top: 20px;
     border: 1px solid rgb(102, 102,102);
 }
@@ -32,4 +32,5 @@
 #btn-back-to-shopping:hover {
     border: none;
     background-color: rgb(102, 102, 102);
+    color: white;
 }
