footer component added, css added

--- a/react-app/src/components/Products/ProductDetails.css
+++ b/react-app/src/components/Products/ProductDetails.css
@@ -106,9 +106,9 @@
 }
 
 
-#product-detail-bottom-ctn {
+/* #product-detail-bottom-ctn {
     border: 1px solid black;
-}
+} */
 
 #btn-add-to-cart {
     width: 100%;
