--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -1,6 +1,7 @@
 .empty-user-bar-ctn {
-    width: 95%;
+    width: 100%;
     margin: auto;
+    background-color: #F8F4EA
 }
 
 #all-products-container {
