--- a/react-app/src/components/Navigation/Drop-down-menus/LogInDropDown.css
+++ b/react-app/src/components/Navigation/Drop-down-menus/LogInDropDown.css
@@ -6,7 +6,7 @@
 
 .drop-down-log-in {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: absolute;
     background-color: white;
     left: -50px;
