product display page css

--- a/react-app/src/components/Navigation/Drop-down-menus/LogOutDropDown.css
+++ b/react-app/src/components/Navigation/Drop-down-menus/LogOutDropDown.css
@@ -1,6 +1,6 @@
 .drop-down-log-out {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     position: absolute;
     background-color: white;
     width: max-content;
