--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -14,11 +14,22 @@
 
 .single-product-card-ctn {
     margin: 20px;
+    width: 311px;
+
+    /* position: relative;
+    padding-top: 153.4%;
+    box-sizing: border-box;
+    overflow: hidden; */
 }
 
-img {
+#single-product-card-img-ctn {
     width: 311px;
     height: 478px;
+}
+
+#single-product-card-img-ctn img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .product-card {
@@ -36,6 +47,8 @@ img {
     color: rgb(57, 57, 57);
     font-weight: 400;
     font-size: 15px;
+    max-width: 100%;
+
 }
 
 #single-card-product-name:hover {
