--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -7,13 +7,16 @@
     width: 95%;
     /* background-color: yellow; */
     margin:auto;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1600px;
+    /* width: 1600px; */
+    width: 100%;
     height: 30%;
 }
 
