--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -4,6 +4,13 @@
     background-color: #F8F4EA
 }
 
+#all-products-outer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* border: black solid 1px; */
+}
+
 #all-products-container {
     display: flex;
     flex-direction: row;
