--- a/react-app/src/components/ShoppingBag/CartModal/AddToCart.css
+++ b/react-app/src/components/ShoppingBag/CartModal/AddToCart.css
@@ -1,7 +1,8 @@
 #cart-modal-ctn {
     display: flex;
     flex-direction: row;
-    padding: 20px;
+    padding: 10px;
+    margin: 10px 50px;
 }
 
 #img-cart-modal {
