--- a/react-app/src/components/auth/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/auth/LoginFormModal/LoginForm.css
@@ -23,9 +23,8 @@
 .auth-form-ctn {
     margin: auto;
     min-width: 400px;
-    /* border: red solid 1px; */
-    padding: 20px;
-    margin: 20px 30px;
+    /* padding: 20px; */
+    margin: 20px;
     display: flex;
     flex-direction: column;
 }
