--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -4,4 +4,5 @@ body {
     padding: 0;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(57, 57, 57);
+    max-width: 2120px;
 }
