--- a/react-app/src/components/auth/AuthPage.css
+++ b/react-app/src/components/auth/AuthPage.css
@@ -4,7 +4,8 @@
 }
 
 .auth-page-form-ctn {
-    width:40%;
+    /* width:50%; */
+    max-width: 500px;
     margin: auto;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     padding: 30px;
