--- a/react-app/src/components/Spinner/Spinner.css
+++ b/react-app/src/components/Spinner/Spinner.css
@@ -1,10 +1,11 @@
 .spinner-ctn {
-  height: 46vh;
+  height: 100vh;
   max-width: 1120px;
   padding: 0 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
 }
 .lds-default {
   display: inline-block;
