--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -1,17 +1,23 @@
+.product-page-spinner-container {
+    margin: auto;
+    margin-top: 500px;
+
+}
+
 .empty-user-bar-ctn {
     width: 100%;
     margin: auto;
     background-color: #F8F4EA
 }
 
-#all-products-outer {
+.all-products-outer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     /* border: black solid 1px; */
 }
 
-#all-products-container {
+.all-products-container {
     display: flex;
     flex-direction: row;
     width: 95%;
