--- a/react-app/src/components/Reviews/SingleReview.css
+++ b/react-app/src/components/Reviews/SingleReview.css
@@ -30,6 +30,10 @@
 #review-content-ctn {
     /* font-family: Arial, Helvetica, sans-serif; */
     font-size: small;
+    max-width: 400px;
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+    /* white-space: nowrap; */
 }
 
 #review-img-ctn {
