--- a/react-app/src/components/Navigation/SearchBar/index.css
+++ b/react-app/src/components/Navigation/SearchBar/index.css
@@ -55,4 +55,23 @@
     width: clamp(268px, 45vw, 760px);
     border: 1px solid #e3e3e3;
     box-shadow: 0 0 5px rgba(0,0,0,0.11);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 99;
+    background-color: #fff;
+}
+
+#single-search-result-outer {
+    border-top: 1px solid #e3e3e3;
+    transition: background-color 0.5s;
+}
+
+#single-search-result-outer:hover {
+    background-color: rgb(227, 227, 227);
+}
+
+#search-result-navlink {
+    text-decoration: none;
+    color: inherit;
 }
