--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -13,12 +13,21 @@
 
 .nav-bar {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    /* width: 1600px; */
+    flex-direction: column;
     width: 100%;
     height: 30%;
 }
+
+#nav-upper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+
 
 #nav-bar-child-right {
     display: flex;
