--- a/react-app/src/components/Buttons/ContinueShopping.css
+++ b/react-app/src/components/Buttons/ContinueShopping.css
@@ -1,19 +1,4 @@
-#empty-bag-page-outer {
-    /* background-color: white; */
-    margin: 20px auto;
-    padding: 20px;
-    width: 30%;
-}
-
-#empty-bag-page-outer div {
-    font-size: x-large;
-}
-
-#back-to-shopping {
-    text-decoration: none;
-}
-
-/* #btn-back-to-shopping {
+#btn-back-to-shopping {
     width: 100%;
     height: 50px;
     background: white none;
@@ -33,4 +18,4 @@
     border: none;
     background-color: rgb(102, 102, 102);
     color: white;
-} */
+}
