--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -12,10 +12,11 @@
 }
 
 .all-products-container {
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
     width: 95%;
-    margin: auto;
+    /* margin: auto;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    align-items: flex-start; */
+    /* justify-content: space-evenly; */
 }
