--- a/react-app/src/components/Navigation/Categories/Categories.css
+++ b/react-app/src/components/Navigation/Categories/Categories.css
@@ -3,6 +3,7 @@
     border-top: 1px rgb(227, 227, 227) solid;
     border-bottom: 1px rgb(227, 227, 227) solid;
     margin-bottom: 30px;
+    box-sizing: border-box;
 }
 
 .category-list-ctn {
@@ -13,4 +14,17 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-top: 15px;
+}
+
+.category-name-border {
+    box-sizing: border-box;
+}
+
+.category-name-border:hover {
+    border-bottom: 2px rgb(227, 227, 227) solid;
+}
+
+.category-name {
+    color: inherit;
+    text-decoration: none;
 }
